# serializer version: 1
# name: test_buttons[button.mock_title_home_xy]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Home XY',
    }),
    'context': <ANY>,
    'entity_id': 'button.mock_title_home_xy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.mock_title_home_z]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Home Z',
    }),
    'context': <ANY>,
    'entity_id': 'button.mock_title_home_z',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.mock_title_pause_print]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Pause print',
    }),
    'context': <ANY>,
    'entity_id': 'button.mock_title_pause_print',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.mock_title_resume_print]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Resume print',
    }),
    'context': <ANY>,
    'entity_id': 'button.mock_title_resume_print',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.mock_title_stop_print]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Stop print',
    }),
    'context': <ANY>,
    'entity_id': 'button.mock_title_stop_print',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
